--- a/i2c_1/Makefile
+++ b/i2c_1/Makefile
@@ -1,7 +1,4 @@
+SYSTEM_LIBS = Wire Wire/utility
+
 include ../Makefile.env
-
-LIBS = Wire Wire/utility
-INC_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(LIBS))
-LIB_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(LIBS))
-
 include ../Makefile.master
