Core code for the ImuModule. A higher level IMU board.
My IMU board drives the Pololu MinIMU-9, running the
DCM algorithm at a configurable frequency and returning
orientation information.

--- a/imu_module/Makefile
+++ b/imu_module/Makefile
@@ -1,7 +1,8 @@
-USER_LIBS = jlewallen L3G4200D/L3G4200D LSM303/LSM303
+USER_LIBS = jlewallen jlewallen/IMU L3G4200D/L3G4200D LSM303/LSM303
 SYSTEM_LIBS = Servo Wire Wire/utility
+USER_C_FLAGS = -Wl,-u,vfprintf -lprintf_flt
 include ../Makefile.env
-PROGRAMMER=avrispv2
-UPLOAD_SPEED=14400
-F_CPU=8000000L
+# PROGRAMMER=avrispv2
+# UPLOAD_SPEED=14400
+# F_CPU=8000000L
 include ../Makefile.master
