--- a/imu_module/Makefile
+++ b/imu_module/Makefile
@@ -2,7 +2,7 @@ USER_LIBS = jlewallen jlewallen/IMU L3G4200D/L3G4200D LSM303/LSM303
 SYSTEM_LIBS = Servo Wire Wire/utility
 USER_C_FLAGS = -Wl,-u,vfprintf -lprintf_flt
 include ../Makefile.env
-# PROGRAMMER=avrispv2
-# UPLOAD_SPEED=14400
-# F_CPU=8000000L
+PROGRAMMER=avrispv2
+UPLOAD_SPEED=14400
+F_CPU=8000000L
 include ../Makefile.master
