Wrapping up testing out the IMU module.

--- a/imu_module_tester/Makefile
+++ b/imu_module_tester/Makefile
@@ -1,4 +1,5 @@
-USER_LIBS = jlewallen
+MON_SPEED = 19200
+USER_LIBS = jlewallen LSM303/LSM303
 SYSTEM_LIBS = Wire Wire/utility
 USER_C_FLAGS = -Wl,-u,vfprintf -lprintf_flt
 include ../Makefile.env
