Change blink_module default slave address.

--- a/blink_module/Makefile
+++ b/blink_module/Makefile
@@ -1,5 +1,6 @@
 include ../Makefile.env
 BOARD=attiny24at8
 HARDWARE=tiny
-PROGRAMMER=stk500v1
+PROGRAMMER=avrispv2
+UPLOAD_SPEED=14400
 include ../Makefile.master
